--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -61,7 +61,8 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "jest": {
     "collectCoverageFrom": [
