--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,3 +52,34 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: dist
+
+  firebase-cd:
+    name: Firebase CD
+    needs:
+      - web-app-cd
+
+    defaults:
+      run:
+        working-directory: firebase
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          # last version
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+        working-directory: firebase/functions
+      - run: npm run lint
+        working-directory: firebase/functions
+      - run: npm run typecheck
+        working-directory: firebase/functions
+      - run: npm test
+        working-directory: firebase/functions
+      - run: npm run build
+        working-directory: firebase/functions
+      - run: npm install -g firebase-tools
+      - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
