--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,10 +48,10 @@ jobs:
       - run: npm run typecheck
       - run: npm test
       - run: npm run build
-      - uses: peaceiris/actions-gh-pages@v3
+      - uses: actions/upload-artifact@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist
+          name: web-app-dist
+          path: dist
 
   firebase-cd:
     name: Firebase CD
@@ -81,5 +81,9 @@ jobs:
         working-directory: firebase/functions
       - run: npm run build
         working-directory: firebase/functions
+      - uses: actions/download-artifact@master
+        with:
+          name: web-app-dist
+          path: dist
       - run: npm install -g firebase-tools
       - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
