--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "firebase-admin": "^8.11.0",
     "firebase-functions": "^3.6.1",
+    "node-fetch": "^2.6.1",
     "node-vibrant": "^3.1.5"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@types/busboy": "^0.2.3",
     "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.22",
+    "@types/node-fetch": "^2.5.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "babel-jest": "^26.6.3",
