--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -35,6 +35,7 @@
     "node": "14"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.7.0",
     "actions-on-google": "^2.12.0",
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
