--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -39,6 +39,7 @@
     "actions-on-google": "^2.12.0",
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^8.11.0",
     "firebase-functions": "^3.6.1",
     "node-fetch": "^2.6.1",
