--- a/shared/package.json
+++ b/shared/package.json
@@ -2,10 +2,14 @@
   "name": "@loginov-rocks/portfolio-shared",
   "version": "1.1.4",
   "description": "Shared",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
-    "lint": "eslint --ext ts src",
-    "typecheck": "tsc"
+    "build": "npm run clean:build && npm run build:sources && npm run build:types",
+    "build:sources": "webpack --mode production",
+    "build:types": "tsc --emitDeclarationOnly",
+    "clean:build": "rimraf lib",
+    "lint": "eslint --ext ts src webpack.config.js",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -18,13 +22,23 @@
     "url": "https://github.com/loginov-rocks/Portfolio/issues"
   },
   "homepage": "https://loginov-rocks-portfolio.firebaseapp.com",
+  "engines": {
+    "node": "14"
+  },
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "typescript": "^4.2.3"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.3",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0"
   }
 }
