--- a/.github/workflows/firebase-ci.yml
+++ b/.github/workflows/firebase-ci.yml
@@ -36,6 +36,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
         working-directory: firebase/functions
+      - run: npm install
+        working-directory: shared
       - run: npm run lint
         working-directory: firebase/functions
       - run: npm run typecheck
