--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -101,6 +101,10 @@ jobs:
           node-version: 14
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+        working-directory: shared
+      - run: npm run build
+        working-directory: shared
+      - run: npm ci
         working-directory: firebase/functions
       - run: npm run lint
         working-directory: firebase/functions
