--- a/.github/workflows/firebase-ci.yml
+++ b/.github/workflows/firebase-ci.yml
@@ -35,9 +35,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-        working-directory: firebase/functions
-      - run: npm install
         working-directory: shared
+      - run: npm run build
+        working-directory: shared
+      - run: npm ci
+        working-directory: firebase/functions
       - run: npm run lint
         working-directory: firebase/functions
       - run: npm run typecheck
