--- a/.github/workflows/firebase-ci.yml
+++ b/.github/workflows/firebase-ci.yml
@@ -34,12 +34,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      # Workaround to use local package in Firebase Functions setup.
+      # Build local dependencies.
       - run: npm ci
         working-directory: shared
       - run: npm run build
         working-directory: shared
-      # End of workaround block.
+      # End of "Build local dependencies" block.
       - run: npm ci
         working-directory: firebase/functions
       - run: npm run lint
